--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "Dante Pérez",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "node-telegram-bot-api": "^0.61.0",
+    "openai": "^3.2.1",
     "telebot": "^1.4.1"
   },
   "devDependencies": {
