--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   "author": "Dante Pérez",
   "license": "MIT",
   "dependencies": {
+    "@tensorflow/tfjs": "^4.5.0",
     "axios": "^1.4.0",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "natural": "^6.3.0",
+    "node-nlp": "^4.26.1",
     "node-telegram-bot-api": "^0.61.0",
     "openai": "^3.2.1",
+    "sklearn": "^0.3.0",
     "telebot": "^1.4.1"
   },
   "devDependencies": {
